test/e2e/testdata/ratelimit-global-shared-cidr-match.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ratelimit-global-shared-cidr-match
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 8080
      protocol: HTTP
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-all-ips
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: cidr-ratelimit-1
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: cidr-ratelimit-2
  rateLimit:
    type: Global
    global:
      rules:
        - clientSelectors:
            - sourceCIDR:
                value: 0.0.0.0/0
                type: Distinct
          limit:
            requests: 3
            unit: Hour
          shared: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cidr-ratelimit-1
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: ratelimit-global-shared-cidr-match
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /foo
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cidr-ratelimit-2
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: ratelimit-global-shared-cidr-match
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /bar
      backendRefs:
        - name: infra-backend-v2
          port: 8080
